# master-e2m-test

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  fieldbus.c  fieldbus.h  imgui.ini  imgui_main.cpp  imgui_main.hpp  master.cpp
e2m/: data.json  e2m_bridge_gen.py  input.xml
e2m/output/: ecat_master_data.h  ecat_slave_data.h  esi.xml
e2m/templates/: ecat_master.h.j2  ecat_slave.h.j2  esi.xml.j2
lib/: imgui.cmake  implot.cmake
